Add async todos items load on component mounting. Add first part of item editing

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,34 @@
     display: none;
 }
 
+.view > .save-button {
+    display: none;
+}
+
+.view > .delete-button {
+    display: inline;
+}
+
+.view > .edit-button {
+    display: inline;
+}
+
 .edit > input {
     display: inline;
 }
 
 .edit > .text {
+    display: none;
+}
+
+.edit > .save-button {
+    display: inline;
+}
+
+.edit > .delete-button {
+    display: none;
+}
+
+.edit > .edit-button {
     display: none;
 }
